--- a/tokens/config.json
+++ b/tokens/config.json
@@ -134,7 +134,7 @@
             "type": "other"
           }
         },
-        "lightness": {
+        "darken": {
           "hover": {
             "value": "0.2",
             "type": "other"
@@ -176,7 +176,7 @@
             "type": "other"
           }
         },
-        "lightness": {
+        "darken": {
           "hover": {
             "value": "0.2",
             "type": "other"
@@ -218,7 +218,7 @@
             "type": "other"
           }
         },
-        "lightness": {
+        "darken": {
           "hover": {
             "value": "0.1",
             "type": "other"
@@ -246,7 +246,7 @@
       "danger": {
         "hue": {
           "default": {
-            "value": "160",
+            "value": "0",
             "type": "other"
           }
         },
@@ -260,7 +260,7 @@
             "type": "other"
           }
         },
-        "lightness": {
+        "darken": {
           "hover": {
             "value": "0.1",
             "type": "other"
@@ -302,7 +302,7 @@
             "type": "other"
           }
         },
-        "lightness": {
+        "darken": {
           "hover": {
             "value": "0.2",
             "type": "other"
@@ -323,6 +323,90 @@
           },
           "active": {
             "value": "0.5",
+            "type": "other"
+          }
+        }
+      },
+      "success": {
+        "hue": {
+          "default": {
+            "value": "160",
+            "type": "other"
+          }
+        },
+        "saturation": {
+          "default": {
+            "value": "60%",
+            "type": "other"
+          },
+          "vibrant": {
+            "value": "100%",
+            "type": "other"
+          }
+        },
+        "darken": {
+          "hover": {
+            "value": "0.1",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.2",
+            "type": "other"
+          }
+        },
+        "alpha": {
+          "default": {
+            "value": "0.4",
+            "type": "other"
+          },
+          "hover": {
+            "value": "0.5",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.6",
+            "type": "other"
+          }
+        }
+      },
+      "warning": {
+        "hue": {
+          "default": {
+            "value": "40",
+            "type": "other"
+          }
+        },
+        "saturation": {
+          "default": {
+            "value": "80%",
+            "type": "other"
+          },
+          "vibrant": {
+            "value": "100%",
+            "type": "other"
+          }
+        },
+        "darken": {
+          "hover": {
+            "value": "0.1",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.2",
+            "type": "other"
+          }
+        },
+        "alpha": {
+          "default": {
+            "value": "0.4",
+            "type": "other"
+          },
+          "hover": {
+            "value": "0.5",
+            "type": "other"
+          },
+          "active": {
+            "value": "0.6",
             "type": "other"
           }
         }
