--- a/tokens/config.json
+++ b/tokens/config.json
@@ -324,6 +324,10 @@
           "active": {
             "value": "0.5",
             "type": "other"
+          },
+          "focusRing": {
+            "value": "{config.color.info.alpha.active} + 0.1",
+            "type": "other"
           }
         }
       },
